--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>coursera project</title>
+    <link href="css.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+    <h1>Our Menu</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">col 1</div>
+    <section class="section_1">
+        <h2>one</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Laudantium ad nulla placeat iure cumque ratione dolorem quo cupiditate incidunt 
+            commodi harum velit praesentium perspiciatis, maiores omnis atque eos pariatur tenetur!</p>
+    </section>
 
+<div class="col-md-3">col 2</div>
+     <section class="section_2">
+        <h2>two</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga, a. Est, laudantium? 
+            Ea eos architecto nisi qui veritatis! Illum facilis nam alias ut nostrum dolor porro a 
+            laborum deleniti asperiores.</p>
+    </section>
+    <div class="col-md-3">col 3</div>
+    <section class="section_3">
+        <h2>three</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur maxime
+             eaque numquam facilis. Magnam ipsam sapiente id a, culpa veniam magni aut dignissimos 
+             dolores voluptates earum soluta facilis quam doloremque!</p>
+    </section>
+    
+
+</div>
+    </div>
+</body>
+</html>
