--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coursera project</title>
-    <link href="css.css" rel="stylesheet" type="text/css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Responsive Layout</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href='script.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <h1>Our Menu</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">col 1</div>
-    <section class="section_1">
-        <h2>one</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Laudantium ad nulla placeat iure cumque ratione dolorem quo cupiditate incidunt 
-            commodi harum velit praesentium perspiciatis, maiores omnis atque eos pariatur tenetur!</p>
-    </section>
+  <div class="container">
+    <div class="row">
 
-<div class="col-md-3">col 2</div>
-     <section class="section_2">
-        <h2>two</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga, a. Est, laudantium? 
-            Ea eos architecto nisi qui veritatis! Illum facilis nam alias ut nostrum dolor porro a 
-            laborum deleniti asperiores.</p>
-    </section>
-    <div class="col-md-3">col 3</div>
-    <section class="section_3">
-        <h2>three</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur maxime
-             eaque numquam facilis. Magnam ipsam sapiente id a, culpa veniam magni aut dignissimos 
-             dolores voluptates earum soluta facilis quam doloremque!</p>
-    </section>
-    
+    <h1 class="menu-title">our menu</h1>
+      <div class="col-lg-4">
+        <div class="item">
+          <div class="item-title" id="title-one">
+            <h3>chicken</h3>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="item">
+         <div class="item-title" id="title-two">
+          <h3>beef</h3>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-lg-tablet">
+      <div class="item">
+       <div class="item-title" id="title-three">
+        <h3>sushi</h3>
+      </div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
+      </p>
+    </div>
+  </div>
 
 </div>
-    </div>
+</div>
 </body>
 </html>
